--- a/Mainsystem/views/adminViews/editUser.handlebars
+++ b/Mainsystem/views/adminViews/editUser.handlebars
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5" style="margin-bottom: 170px;">
     <h2>Edit User</h2>
     <form action="/admin/edit/{{user.id}}" method="POST">
         <div class="mb-3">
