--- a/Mainsystem/views/adminViews/detailUser.handlebars
+++ b/Mainsystem/views/adminViews/detailUser.handlebars
@@ -1,9 +1,4 @@
-<style>
-    body{
-        min-height: 1000px;
-    }
-</style>
-<div class="container s">
+<div class="container mt-5" style="margin-bottom: 320px;">
     <div class="card shadow">
         <div class="card-header bg-primary text-white">
             <h3 class="card-title text-center">Account Details</h3>
